More work on branches

--- a/Web/Server/Views/Uploads/Index.cshtml
+++ b/Web/Server/Views/Uploads/Index.cshtml
@@ -7,7 +7,7 @@
     <h3>Package uploading</h3>
 </div>
 <div class="row">
-    <form enctype="multipart/form-data" action="/api/packages" method="POST">
+    <form enctype="multipart/form-data" action="/uploads" method="POST">
       <label>File</label>
       <input type="file" name="package" />
       <br/>
