--- a/Web/Server/Views/Shared/_Layout.cshtml
+++ b/Web/Server/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -33,8 +34,17 @@
             }
         </address>
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
+    <script>
+      $(document).ready(function(){
+        (function poll() {
+          $.ajax({method: "POST", url: "/updates", success: function(data) {
+            console.log(data);
+            poll();
+          }});        
+        })();
+      });
+    </script>
 </body>
 </html>
